# phi2

./: .gitignore  LICENSE  README.md  export_phi2_tokenizer.py  run_phi2_genai_hf_tokenizer.py  run_phi2_genai_ort.py  run_phi2_opt_onnx.py  run_phi2_opt_ort.py  run_phi2_pt.py
cpp/: CMakeLists.txt  main.cpp
models/: get_model_config.py
models/microsoft/phi-2/: config.json  export_phi2_tokenizer.py
models/microsoft/phi-2/fp16-cuda/: config.json
models/microsoft/phi-2/fp32/: config.json
models/microsoft/phi-2/int4/: config.json
models/microsoft/phi-2/int4-cpu/: config.json
models/microsoft/phi-2/int4-cuda/: config.json
python/: run_phi2_genai_ort.py  run_phi2_genai_simplfied.py  run_phi2_pt.py
